v2016-03-17
  * 根据YCM 的改动修改了make 的参数

v2016-03-08
  * tig:
      增加tig 配置文件

v2016-02-24
  * bash & zsh:
      现在archpkg clean-system 时使用-Rsn 参数了

v2016-02-21
  * bash & zsh:
      修复了vman 不带参数运行导致终端退出的错误

v2016-02-19
  * bash & zsh:
      增加vman 函数

v2016-02-18
  * bash & zsh:
      修正了git 目录下错误的init 脚本

v2016-02-16.2
  * zsh:
      Fixed #1

v2016-02-16
  * bash & zsh:
      为android_env 增加了初始化脚本
  * tmux:
      修改了一处新版本中变动的配置选项
  * nano:
      删除了一处不兼容新版本的配置选项

v2016-01-29
  * vim:
      增加了插件vim-jst 和vim-javascript

v2016-01-26
  * all:
      cpan 模块使用系统默认路径
  * zsh:
      完善了说明文件

v2016-01-21
  * all:
      备份文件采用了更加明确的时间后缀

v2016-01-13
  * zsh:
      增加了一些小函数

v2015-12-30
  * zsh & bash:
      增加了一些alias
  * bash:
      完善了bash 的基本配置和补全
  * vim:
      修正了一处map 错误

v2015-12-03
  * vim:
      完善了README.md
      添加了依赖zlib
      移除了插件python-syntax

v2015-11-18
  * zsh & bash:
      添加了一些ls 和cd 指令的容错
  * vim
      增加了perl 脚本的实时错误检查
      增加了插件ultisnips

v2015-11-13
  * zsh & bash:
      Add girlfriend
  * nano:
      PKGBUILD 语法高亮使用单独的文件
  * terminator:
      修改了键位以兼容nano
      禁用了大多数快捷键

v2015-11-05.2
  * zsh:
      增加了ssh-env 和archpkg 的自动补全
      增加了groot 指令

v2015-11-05
  * git:
      现在git 配置不会被安装了

v2015-11-01
  * fish:
      移除了fish 配置
  * bash:
      使用bash-git-prompt，避免了之前PS1 在android-env 中的一个错误

v2015-10-26
  * zsh:
      调整了配置架构
      现在android_env 函数会加载~/.bahsrc 了
  * bash:
      现在与zsh 共享自定义配置

v2015-10-25.2
  * fish:
      创建了可能不存在的目录

v2015-10-25.1
  * fish:
      创建了可能不存在的目录

v2015-10-25
  * all:
      补充了一些基本的说明文件
  * fish:
      手动设置oh-my-fish，不再使用官方脚本

v2015-10-24
  * all:
      增加了一些基本的说明文件
  * zsh:
      修改了alias 设置，不再使用绝对路径
      修改了ssh_env

v2015-10-16
  * vim:
      增加了插件accelerated-smooth-scroll
  * zsh:
      规范了一些比较语句
      更改了挂载函数的逻辑
  * vsftpd:
      更改了说明文件

v2015-10-14
  * udev:
      增加了Spreadtrum 设备的udev rule

v2015-10-10
  * zsh:
      增加了挂载函数的安全性检查
      修正了ssh_env 的一处错误
  * vim:
      插件的细微调整

v2015-09-29.1
  * zsh: